<resources>
    <string name="app_name">NorteGo</string>


    <string name="permiso_requerido">Permiso requerido</string>
    <string name="cancelar">Cancelar</string>
    <string name="ajustes">Ajustes</string>
    <string name="permiso_camara_ajustes">Se requiere permiso de Cámara para tomar fotografías. Por favor habilitar en la configuración</string>
    <string name="permiso_galeria_ajustes">Se requiere permiso para acceder a galería de imágenes. Por favor habilitar en la configuración</string>
    <string name="permiso_denegado">Permiso denegado</string>
    <string name="esta_aplicacion_camara">Esta aplicación necesita acceder a la cámara para tomar fotografía</string>
    <string name="esta_aplicacion_galeria">Esta aplicación necesita acceder a la galería para seleccionar fotografía</string>
    <string name="logo">Logo</string>
    <string name="ingresar">Ingresar</string>
    <string name="el_salvador">El Salvador</string>
    <string name="numero_de_telefono">Número de teléfono</string>
    <string name="logotipo">Logotipo</string>
    <string name="telefono_es_requerido">Teléfono es requerido</string>
    <string name="el_numero_telefono_introducido">El teléfono introducido es demasiado corto</string>
    <string name="nota">Nota</string>
    <string name="aceptar">Aceptar</string>
    <string name="verificar_el_numero_de_telefono">Verificar el número de teléfono.</string>
    <string name="editar">Editar</string>
    <string name="verificar">Verificar</string>
    <string name="ingresa_el_codigo_de_6">Ingresa el código de 6 dígitos que enviamos a tu número de teléfono</string>
    <string name="guiones">--- ---</string>
    <string name="reenviar_codigo">Reenviar Código</string>
    <string name="error_intentar_de_nuevo">Error, intentar de nuevo</string>
    <string name="bloqueado">Bloqueado</string>
    <string name="numero_bloqueado">Número de teléfono bloqueado, contactar a la Administración</string>
    <string name="salir">Salir</string>
    <string name="cargando">Cargando…</string>
    <string name="verificando">Verificando</string>
    <string name="reintentar_en">Reintentar en</string>
    <string name="codigo_enviado">Código enviado</string>
    <string name="codigo_incorrecto">Código incorrecto</string>
    <string name="verificado">Verificado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="servicios">Servicios</string>
    <string name="codigo_para_nortego">Código para NorteGo:</string>
    <string name="nueva_actualizacion">Nueva actualización</string>
    <string name="actualizar_nueva_version">Hay una nueva versión disponible. ¿Deseas actualizar ahora?</string>
    <string name="por_favor_actualizar_la_app">Por favor, actualiza la aplicación para acceder a este Servicio.</string>
    <string name="actualizar">Actualizar</string>
    <string name="permiso_lozalizacion_ajustes">Se requiere permiso para acceder a ubicación. Por favor habilitar en la configuración</string>
    <string name="nota_opcional">Nota (Opcional)</string>
    <string name="enviar">ENVIAR</string>
    <string name="abrir_camara">Abrir Cámara</string>
    <string name="abrir_galeria">Abrir Galería</string>
    <string name="opciones">Opciones</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="notificacion_enviada">Notificación Enviada</string>
    <string name="solicitud_tala_arbol">Solicitud Tala de Árbol</string>
    <string name="denuncia_arbol">Denuncia Tala de Árbol</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="imagen_del_arbol">Imagen del Árbol</string>
    <string name="tiene_escritura">¿Tiene Escritura?</string>
    <string name="nombre_es_requerido">Nombre es requerido</string>
    <string name="direccion_es_requerido">Dirección es requerido</string>
    <string name="imagen_arbol_es_requerido">Imagen del Árbol es requerido</string>
    <string name="nota_es_requerida">Nota es requerida</string>
    <string name="notas">Notas</string>
    <string name="whatsapp_no_instalado">Whatsapp No Instalado</string>
    <string name="permiso_localizacion_es_requerido">Permiso de localización es Requerido</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="borrar_solicitud">Borrar Solicitud</string>
    <string name="ocultar_solicitud">Ocultar Solicitud</string>
    <string name="dui">DUI</string>
    <string name="solvencia_de_inmueble">Solvencia de Inmueble</string>
    <string name="solvencia_de_empresa">Solvencia de Empresa</string>
    <string name="dui_es_requerido">DUI es requerido</string>
    <string name="ocultado">Ocultado</string>
    <string name="no_hay_solicitudes">No hay Solicitudes</string>
    <string name="verifica">Verifica: %1$s!</string>




</resources>