<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_blanco">

    <include
        android:id="@+id/toolbarCon"
        layout="@layout/toolbar_v1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarCon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioInmueble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/solvencia_de_inmueble"
                    android:textColor="@color/negro"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioEmpresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solvencia_de_empresa"
                    android:textColor="@color/negro"
                    android:textSize="18sp" />
            </RadioGroup>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintSolicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNombre"
                    style="@style/Text_Input_Layout_Estilo_v1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="16dp"
                    app:boxStrokeColor="@color/estilo_text_input_box_stroke"
                    app:boxStrokeWidth="1dp"
                    app:errorTextAppearance="@style/Text_Input_Layout_Error_Apariencia"
                    app:hintTextColor="@color/gris616161"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNombre"
                        style="@style/Input_Edit_Text_Tema"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/c_blanco"
                        android:hint="@string/nombre_completo"
                        android:inputType="text"
                        android:maxLength="100"
                        android:textColor="@color/fondo_textos_negro_blanco_v1"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:hintTextAppearance="@style/Input_Edit_Text_Hint_Input" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/inputDui"
                    style="@style/Text_Input_Layout_Estilo_v1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    app:boxStrokeColor="@color/estilo_text_input_box_stroke"
                    app:boxStrokeWidth="1dp"
                    app:errorTextAppearance="@style/Text_Input_Layout_Error_Apariencia"
                    app:hintTextColor="@color/gris616161"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputNombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDui"
                        style="@style/Input_Edit_Text_Tema"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/c_blanco"
                        android:hint="@string/dui"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textColor="@color/fondo_textos_negro_blanco_v1"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:hintTextAppearance="@style/Input_Edit_Text_Hint_Input" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/codigo_boton_redondeado_v1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/enviar"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputDui" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>


